Fix alignments

--- a/static/koboldai.css
+++ b/static/koboldai.css
@@ -485,6 +485,18 @@ input[type="range"]::-ms-fill-upper {
 	height: 35px;
 }
 
+.settings_button > .button_label {
+	position: relative;
+	bottom: 3px;
+	right: 4px;
+}
+
+.settings_button > .material-icons-outlined {
+	position: relative;
+	top: 3px;
+	right: 2px;
+}
+
 .settings_button[story_gamesaved="true"] {
 	filter: brightness(40%);
 }
